--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img
           class="background-picture"
           src="./images/background header/people-office.jpg"
-          alt="people"
+          alt="People"
         />
         <div class="container hero-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
