--- a/index.html
+++ b/index.html
@@ -55,11 +55,6 @@
     <main>
       <!-- ========HERO======== -->
       <section class="hero">
-        <img
-          class="background-picture"
-          src="./images/background header/people-office.jpg"
-          alt="People"
-        />
         <div class="container hero-container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="order-service" type="button">Order Service</button>
@@ -71,7 +66,7 @@
           <h2 class="section title visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
-              <div>
+              <div class="benefits-icon-total">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
@@ -83,7 +78,7 @@
               </p>
             </li>
             <li class="benefits-list-item">
-              <div>
+              <div class="benefits-icon-total">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
@@ -95,7 +90,7 @@
               </p>
             </li>
             <li class="benefits-list-item">
-              <div>
+              <div class="benefits-icon-total">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
@@ -107,7 +102,7 @@
               </p>
             </li>
             <li class="benefits-list-item">
-              <div>
+              <div class="benefits-icon-total">
                 <svg class="benefits-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
@@ -313,32 +308,32 @@
           </p>
         </div>
         <div>
-          <p>Social media</p>
+          <p class="social-media">Social media</p>
           <ul class="social-list">
             <li class="social-list-item">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="40" height="40">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="40" height="40">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="40" height="40">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="40" height="40">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
