--- a/index.html
+++ b/index.html
@@ -132,7 +132,40 @@
                 <h3 class="team-names">Mark Guerrero</h3>
                 <p class="team-roles">Product Designer</p>
               </div>
+              <div>
+                <ul class="social-list-team">
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
+
             <li class="team-photos">
               <img
                 src="./images/Team/tom-ford.jpg"
