--- a/index.html
+++ b/index.html
@@ -174,6 +174,36 @@
               <div class="our-team-description">
                 <h3 class="team-names">Tom Ford</h3>
                 <p class="team-roles">Frontend Developer</p>
+                <ul class="social-list-team">
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-photos">
