--- a/index.html
+++ b/index.html
@@ -216,6 +216,36 @@
               <div class="our-team-description">
                 <h3 class="team-names">Camila Garcia</h3>
                 <p class="team-roles">Marketing</p>
+                <ul class="social-list-team">
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-photos">
@@ -228,6 +258,36 @@
               <div class="our-team-description">
                 <h3 class="team-names">Daniel Wilson</h3>
                 <p class="team-roles">UI Designer</p>
+                <ul class="social-list-team">
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item-team">
+                    <a href="" class="social-list-link-team">
+                      <svg class="social-list-icon-team" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
